fix: make rubric and review error width align

--- a/src/containers/Rubric/Rubric.scss
+++ b/src/containers/Rubric/Rubric.scss
@@ -31,8 +31,6 @@
     }
   }
 }
-.rubric-feedback {
-}
 
 .criterion-feedback {
   margin-top: 1rem;
@@ -51,6 +49,7 @@
   width: 320px;
   height: fit-content;
   max-height: 100%;
+  margin-left: map-get($spacers, 3);
 
   .grading-rubric-header {
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.3) !important;
